samples/_failures_safe/1761141757_e16f0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a48da86a.c: In function ‘main’:
./samples/SAFE/__tmp_a48da86a.c:123:25: error: expected declaration or statement at end of input
  123 |                         fprintf(stderr, "Integer overflow in multiplication\n");
      |                         ^~~~~~~
./samples/SAFE/__tmp_a48da86a.c:123:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a48da86a.c:123:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a48da86a.c:123:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a48da86a.c:123:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a48da86a.c:123:25: error: expected declaration or statement at end of input
